@@ -134,7 +134,7 @@ int	VFS_FS_SIZE(AGENT_REQUEST *request, AGENT_RESULT *result)
 	fsname = get_rparam(request, 0);
 	mode = get_rparam(request, 1);
 
-	if (NULL == fsname && '\0' == *fsname)
+	if (NULL == fsname || '\0' == *fsname)
 		return SYSINFO_RET_FAIL;
 
 	if (NULL == mode || '\0' == *mode || 0 == strcmp(mode, "total"))
